--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="./xsd_css/bootstrap.min.css">
 
-    <title>会员饰品查询备忘2</title>
+    <title>会员饰品查询备忘</title>
     
 
 
